--- a/pom.xml
+++ b/pom.xml
@@ -254,7 +254,40 @@
             <url>https://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
-
-
+	
+	<!-- Developers -->
+	<developers>
+    <developer>
+      <id>josaloroc</id>
+      <name>José Luis Alonso</name>
+      <email>josaloroc@alumn.us.es</email>
+      <url>http://www.example.com/josaloroc</url>
+      <organization>PSG2-2021-G1-14</organization>
+      <organizationUrl>http://www.example.com/PSG2-2021-G1-14</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>Europe/Madrid</timezone>
+      <properties>
+        <picUrl>https://imgur.com/PIHjJot</picUrl>
+      </properties>
+    </developer>
+        <developer>
+      <id>alvechdel</id>
+      <name>Álvaro Echegoyán Delgado</name>
+      <email>alvechdel@alumn.us.es</email>
+      <url>https://github.com/alvechdel</url>
+      <organization>PSG2-2021-G1-14</organization>
+      <organizationUrl>https://github.com/alvechdel/PSG2-2021-G1-14</organizationUrl>
+      <roles>
+        <role>developer</role>
+        <role>Scrum Master</role>
+      </roles>
+      <timezone>Europe/Madrid</timezone>
+      <properties>
+        <picUrl></picUrl>
+      </properties>
+    </developer>
+  </developers>
 
 </project>
