--- a/pom.xml
+++ b/pom.xml
@@ -285,7 +285,7 @@
       </roles>
       <timezone>Europe/Madrid</timezone>
       <properties>
-        <picUrl></picUrl>
+        <picUrl>https://imgur.com/a/1UcueeB</picUrl>
       </properties>
     </developer>
   </developers>
