--- a/pom.xml
+++ b/pom.xml
@@ -261,15 +261,30 @@
       <id>josaloroc</id>
       <name>José Luis Alonso</name>
       <email>josaloroc@alumn.us.es</email>
-      <url>http://www.example.com/josaloroc</url>
+      <url>https://github.com/josaloroc</url>
       <organization>PSG2-2021-G1-14</organization>
-      <organizationUrl>http://www.example.com/PSG2-2021-G1-14</organizationUrl>
+      <organizationUrl>https://github.com/gii-is-psg2/PSG2-2021-G1-14.git</organizationUrl>
       <roles>
         <role>developer</role>
       </roles>
       <timezone>Europe/Madrid</timezone>
       <properties>
         <picUrl>https://imgur.com/PIHjJot</picUrl>
+      </properties>
+    </developer>
+    <developer>
+      <id>carloscg00</id>
+      <name>Carlos Cano</name>
+      <email>carcangom@alumn.us.es</email>
+      <url>https://github.com/carloscg00</url>
+      <organization>PSG2-2021-G1-14</organization>
+      <organizationUrl>https://github.com/gii-is-psg2/PSG2-2021-G1-14.git</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>Europe/Madrid</timezone>
+      <properties>
+        <picUrl>https://imgur.com/a/9qKXVFb</picUrl>
       </properties>
     </developer>
   </developers>
