--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,16 @@
             "mainClass": "org.springframework.samples.petclinic.PetclinicApplication",
             "projectName": "spring-petclinic",
             "args": ""
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-PetclinicApplication<spring-petclinic.psg2.2021-G1-14>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "mainClass": "org.springframework.samples.petclinic.PetclinicApplication",
+            "projectName": "spring-petclinic.psg2.2021-G1-14",
+            "args": ""
         }
     ]
 }
