--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch PetclinicApplication",
+            "request": "launch",
+            "mainClass": "org.springframework.samples.petclinic.PetclinicApplication",
+            "projectName": "spring-petclinic.psg2.2021-G1-14"
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-PetclinicApplication<spring-petclinic>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
