--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
             "type": "java",
             "name": "Launch PetclinicApplication",
             "request": "launch",
-            "mainClass": "org.springframework.samples.petclinic.PetclinicApplication",
+            "mainClass": "C:\\Users\\Álvaro\\Desktop\\Universidad\\3º\\PSG2\\Workspace\\PSG2-2021-G1-14\\src\\main\\java\\org\\springframework\\samples\\petclinic\\PetclinicApplication.java",
             "projectName": "spring-petclinic.psg2.2021-G1-14"
         },
         {
@@ -13,7 +13,7 @@
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
-            "mainClass": "org.springframework.samples.petclinic.PetclinicApplication",
+            "mainClass": "C:\\Users\\Álvaro\\Desktop\\Universidad\\3º\\PSG2\\Workspace\\PSG2-2021-G1-14\\src\\main\\java\\org\\springframework\\samples\\petclinic\\PetclinicApplication.java",
             "projectName": "spring-petclinic",
             "args": ""
         },
